--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "ink": "^6.6.0",
+    "react": "^19.2.4"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.2"
+    "@types/bun": "^1.2.2",
+    "@types/react": "^19.2.13"
   }
 }
